crates/omnifs-cli/src/snapshots/omnifs__status__golden__daemon_down_json.snap
---
source: crates/omnifs-cli/src/status.rs
expression: "serde_json::to_string_pretty(&report.into_json()).unwrap()"
---
{
  "version": "0.2.1",
  "runtime": {
    "state": "not_running"
  },
  "mount": null,
  "frontends": [],
  "paths": {
    "config_dir": "/omnifs-home",
    "cache_dir": "/omnifs-home/cache",
    "mounts_dir": "/omnifs-home/mounts",
    "providers_dir": "/omnifs-home/providers",
    "credentials_file": "/omnifs-home/credentials.json",
    "config_file": "/omnifs-home/config.toml"
  },
  "mounts": [
    {
      "state": "ready",
      "config_path": "/omnifs-home/mounts/github.json",
      "mount": "github",
      "provider": "github",
      "provider_present": true,
      "auth": {
        "state": "ready",
        "kind": "oauth",
        "scopes": [
          "repo",
          "read:org"
        ],
        "expires_at": "2026-08-01T00:00:00Z",
        "refreshability": "not-applicable",
        "notices": []
      }
    },
    {
      "state": "ready",
      "config_path": "/omnifs-home/mounts/rss.json",
      "mount": "rss",
      "provider": "rss",
      "provider_present": true,
      "auth": {
        "state": "none"
      }
    },
    {
      "state": "ready",
      "config_path": "/omnifs-home/mounts/linear.json",
      "mount": "linear",
      "provider": "linear",
      "provider_present": true,
      "auth": {
        "state": "missing",
        "command": "omnifs mount reauth linear"
      }
    },
    {
      "state": "ready",
      "config_path": "/omnifs-home/mounts/notion.json",
      "mount": "notion",
      "provider": "notion",
      "provider_present": true,
      "auth": {
        "state": "error",
        "message": "credential store unreadable"
      }
    },
    {
      "state": "invalid",
      "config_path": "/omnifs-home/mounts/broken.json",
      "error": "provider artifact missing"
    }
  ],
  "providers": []
}
