crates/omnifs-cli/src/snapshots/omnifs__status__golden__running_grid.snap
---
source: crates/omnifs-cli/src/status.rs
expression: strip_ansi(&report.build_report(false).render())
---
omnifs 0.2.1
  ✓ daemon        running (pid 41231, api 2.1)
  • home          /omnifs-home

Frontends (2)
  ● fuse (local)  /omnifs  attached
  ● fuse (docker) /omnifs (guest)  attached

Mounts (5)
  ● github        oauth  2 scopes  expires 2026-08-01T00:00:00Z
  ◌ rss           no auth needed
  ! linear        needs sign-in; run `omnifs mount reauth linear`
  ✗ notion        credential store unreadable; run `omnifs mount reauth notion`
  ✗ broken.json   invalid (provider artifact missing)
