crates/omnifs-cli/src/snapshots/omnifs__status__golden__running_json_includes_frontend_details_without_changing_existing_fields.snap
---
source: crates/omnifs-cli/src/status.rs
expression: "serde_json::to_string_pretty(&report.into_json()).unwrap()"
---
{
  "version": "0.2.1",
  "runtime": {
    "state": "running",
    "version": "0.2.1",
    "api_major": 2,
    "api_minor": 1,
    "pid": 41231,
    "executable": "",
    "mount_point": "/omnifs",
    "config_dir": "/omnifs-home",
    "cache_dir": "/omnifs-home/cache",
    "health": {
      "subsystems": []
    },
    "mounts": [],
    "failed_mounts": []
  },
  "mount": {
    "source": "provider",
    "mount_point": "/omnifs",
    "fs_type": "fuse"
  },
  "frontends": [
    {
      "fs_type": "fuse",
      "delivery": "local",
      "mount_point": "/omnifs"
    },
    {
      "fs_type": "fuse",
      "delivery": "docker",
      "mount_point": "/omnifs"
    }
  ],
  "paths": {
    "config_dir": "/omnifs-home",
    "cache_dir": "/omnifs-home/cache",
    "mounts_dir": "/omnifs-home/mounts",
    "providers_dir": "/omnifs-home/providers",
    "credentials_file": "/omnifs-home/credentials.json",
    "config_file": "/omnifs-home/config.toml"
  },
  "mounts": [
    {
      "state": "ready",
      "config_path": "/omnifs-home/mounts/github.json",
      "mount": "github",
      "provider": "github",
      "provider_present": true,
      "auth": {
        "state": "ready",
        "kind": "oauth",
        "scopes": [
          "repo",
          "read:org"
        ],
        "expires_at": "2026-08-01T00:00:00Z",
        "refreshability": "not-applicable",
        "notices": []
      }
    },
    {
      "state": "ready",
      "config_path": "/omnifs-home/mounts/rss.json",
      "mount": "rss",
      "provider": "rss",
      "provider_present": true,
      "auth": {
        "state": "none"
      }
    },
    {
      "state": "ready",
      "config_path": "/omnifs-home/mounts/linear.json",
      "mount": "linear",
      "provider": "linear",
      "provider_present": true,
      "auth": {
        "state": "missing",
        "command": "omnifs mounts reauth linear"
      }
    },
    {
      "state": "ready",
      "config_path": "/omnifs-home/mounts/notion.json",
      "mount": "notion",
      "provider": "notion",
      "provider_present": true,
      "auth": {
        "state": "error",
        "message": "credential store unreadable"
      }
    },
    {
      "state": "invalid",
      "config_path": "/omnifs-home/mounts/broken.json",
      "error": "provider artifact missing"
    }
  ],
  "providers": []
}
